# OpenEmail-GTK

./: .gitignore  README.md  com.mercata.OpenEmail.yaml  contacts-page.blp  meson.build  pyproject.toml  pyrightconfig.json
data/: com.mercata.OpenEmail.desktop.in  com.mercata.OpenEmail.gschema.xml.in  com.mercata.OpenEmail.metainfo.xml.in  data.gresource.xml.in  gschema.xml.in  meson.build  openemail.in  openemail.service.in
data/icons/: icons.gresource.xml.in  meson.build
data/icons/scalable/actions/: icons.gresource.xml.in  meson.build
flatpak/: com.mercata.OpenEmail.json  python3-cryptography-cargo-deps.json  python3-modules.json
openemail/: __init__.py  __init__.py.in  __main__.py  _config.py  _config.py.in  _notifier.py  _property.py  account.py  application.py  asyncio.py  auth.py  client.py  configuration.py  configuration.py.in  contacts_page.py  crypto.py  dict_store.py  gresource.xml.in  mail.py  main.py  meson.build  message.py  messages.py  network.py  notifier.py  openemail.gresource.xml.in  openemail.in  profile.py  profile_page.py  property.py  shared.py  shared.py.in  sidebar_item.py  store.py  style.css  tasks.py  user.py  window.py
openemail/app/: __init__.py  _notifier.py  account.py  mail.py  main.py  message.py  profile.py  store.py
openemail/core/: __init__.py  account.py  client.py  contacts.py  crypto.py  drafts.py  message.py  messages.py  model.py  network.py  profile.py  urls.py  user.py
openemail/gtk/: __init__.py  application.py  attachments.blp  attachments.py  auth-view.blp  auth_view.py  body.py  broadcasts-page.blp  broadcasts_page.py  compose-dialog.blp  compose-sheet.blp  compose_sheet.py  contact-row.blp  contact_row.py  contacts-page.blp  contacts.blp  contacts.py  contacts_page.py  content-page.blp  content-view.blp  content.blp  content.py  content_page.py  content_view.py  drafts-page.blp  form.py  gtk.gresource.xml.in  help-overlay.blp  login-view.blp  login_view.py  meson.build  message-row.blp  message-view.blp  message.blp  message_row.py  message_view.py  messages-page.blp  messages.blp  messages.py  messages_page.py  (+20 more)
openemail/gtk/ui/: attachments-item.blp  attachments.blp  compose-sheet.blp  contact-row.blp  contacts.blp  content.blp  login-view.blp  meson.build  message-row.blp  message-view.blp  messages.blp  page.blp  preferences.blp  profile-settings.blp  profile-view.blp  style.css  thread-view.blp  ui.gresource.xml.in  window.blp
openemail/lib/: asyncio.py  dict_store.py  mail.py  notifier.py
openemail/widgets/: __init__.py  attachments.py  auth_view.py  body.py  compose_dialog.py  compose_sheet.py  contact_row.py  contacts.py  contacts_page.py  content.py  content_page.py  content_view.py  drafts_page.py  form.py  login_view.py  message.py  message_body.py  message_view.py  messages.py  messages_page.py  navigation_row.py  page.py  preferences.py  profile.py  profile_settings.py  profile_view.py  request_buttons.py  thread_view.py  window.py
po/: POTFILES.in  meson.build
